--- a/css/styles.css
+++ b/css/styles.css
@@ -286,6 +286,11 @@ img {
     width: 30px;
     height: 30px;
     margin: 8px;
+    background-color: var(--primary-white-color);
+}
+
+.close-icon {
+    fill: var(--title-text-color);
 }
 
 /* -------about-------------------- */
