--- a/css/styles.css
+++ b/css/styles.css
@@ -98,12 +98,18 @@ img {
     display: flex;
 }
 
-.header-item .current::after {
+.studia {
+    position: relative;
+}
+
+
+a.studia.current::after {
     position: absolute;
     content: "";
-    width: 48px;
+    display: block;
+    width: 100%;
     height: 4px;
-    top: 76px;
+    bottom: 0;
     background-color: var(--accent-color);
     border-radius: 2px;
 }
@@ -121,6 +127,7 @@ img {
     line-height: 1.14;
     letter-spacing: 0.02em;
     display: flex;
+    
 }
 
 .auth-nav {
@@ -133,14 +140,20 @@ img {
 
 .site-nav .link {
     color: var(--title-text-color);
+    transition: 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 .site-nav .link.current {
     color: var(--accent-color);
+    transition: 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 .auth-nav .link {
     color: var(--primary-text-color);
+    transition: 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 .site-nav .studia:hover, 
@@ -169,6 +182,7 @@ img {
     margin-right: 10px;
     fill: var(--primary-text-color);
     align-self: baseline;
+    transition: 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-phone {
@@ -177,6 +191,7 @@ img {
     margin-right: 10px;
     fill: var(--primary-text-color);
     align-self: baseline;
+    transition: 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .auth-nav .link:hover .icon-email,
@@ -248,6 +263,7 @@ img {
     left: 0;
     top: 0;
 
+    /* указать visibility */
     width: 100%;
     height: 100%;
 
@@ -286,6 +302,7 @@ img {
     width: 30px;
     height: 30px;
     margin: 8px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: var(--primary-white-color);
 }
 
@@ -637,9 +654,11 @@ img {
 }
 
 .portfolio-list {
+    position: relative;
     flex-basis: calc(100% / 3 - 30px);
     margin-left: 30px;
     margin-bottom: 30px;
+    
 }
 
 .portfolio-list-heading {
@@ -657,6 +676,7 @@ img {
 }
 
 .card-content {
+    position: relative;
     padding: 20px 24px;
     border-right: 1px solid #EEEEEE;
     border-bottom: 1px solid #EEEEEE;
@@ -670,8 +690,19 @@ img {
     margin-bottom: 50px;
 }
 
+.potfolio-thumb {
+    position: relative;
+    display: block;
+    overflow: hidden;
+    height: 294px;
+    width: 370px;
+}
+
 .portfolio-site {
     display: block;
+    
+    
+    
 }
 
 .portfolio-list > .portfolio-site:hover,
@@ -679,4 +710,35 @@ img {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
                 0px 4px 4px rgba(0, 0, 0, 0.06),
                 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.potfolio-thumb:hover .sublist {
+    display: block;
+    background-color: rgba(33, 150, 243, 0.9);
+    transform: translateY(0);
+    
+}
+
+.sublist {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 63px 24px;
+    margin: 0;
+    background-color: #fff;
+    height: 294px;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+}
+
+.sublist-text {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: 0.03em;
+    color: var(--primary-white-color);
 }
