--- a/css/styles.css
+++ b/css/styles.css
@@ -263,15 +263,16 @@ a.studia.current::after {
     left: 0;
     top: 0;
 
-    /* указать visibility */
     width: 100%;
     height: 100%;
 
     background-color: rgba(0, 0, 0, 0.2);
     padding: 222px 536px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
+    visibility: hidden;
     opacity: 0;
     pointer-events: none;
 }
