--- a/css/styles.css
+++ b/css/styles.css
@@ -707,10 +707,7 @@ a.studia.current::after {
 }
 
 .portfolio-site {
-    display: block;
-    
-    
-    
+    display: block; 
 }
 
 .portfolio-list > .portfolio-site:hover,
@@ -720,11 +717,11 @@ a.studia.current::after {
                 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.potfolio-thumb:hover .sublist {
+.portfolio-list > .portfolio-site:hover .sublist,
+.portfolio-list > .portfolio-site:focus .sublist{
     display: block;
     background-color: rgba(33, 150, 243, 0.9);
     transform: translateY(0);
-    
 }
 
 .sublist {
@@ -738,7 +735,6 @@ a.studia.current::after {
     width: 100%;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
 }
 
 .sublist-text {
